name:                top
version:             0.1.1
synopsis:            API for top, the typed oriented protocol.
description:         Please see README.md
homepage:            http://github.com/tittoassini/top
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          tittoassini@gmail.com
copyright:           Copyright: (c) 2015 Pasqualino `Titto` Assini
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Pattern,Data.Pattern.Types,Data.Pattern.TH,Data.Pattern.Util,Data.Pattern.Transform,Network.Top,Network.Top.Pipes,Network.Top.Repo,Network.Top.Types,Network.Top.Run,Network.Top.Util,Network.Top.WebSockets,Repo.Types,Repo.Memory
  build-depends:       async, base >= 4.7 && < 5, bytestring, data-default-class, flat>=0.3, template-haskell, pipes, transformers, zm>=0.2, text, stm,ListLike,containers,mtl,deepseq,extra,time,pretty
 -- ,invariant
  if impl(ghc < 8)
    build-depends: th-lift

  if impl(ghcjs)
    build-depends:     ghcjs-base        >= 0.2 && < 0.3
  else
    exposed-modules: Repo.DB,Repo.Disk   
    build-depends:    websockets,hslogger,acid-state,safecopy,filepath
  default-language:    Haskell2010

test-suite top-test
  type:                exitcode-stdio-1.0
  -- executable top-test
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,zm,hslogger,bytestring,websockets,async >= 2.1.0,stm,top,template-haskell,extra,unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- test-suite top-test-pattern
--   type:                exitcode-stdio-1.0
--   -- executable top-test
--   hs-source-dirs:      test
--   main-is:             PatternSpec.hs
--   build-depends:       base,top
--   -- zm,hslogger,bytestring,websockets,async >= 2.1.0,stm,top,template-haskell,extra,unix
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

test-suite top-doctest
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            DocSpec.hs
  build-depends:      base >4 && <5, doctest>=0.11.1, filemanip>=0.3.6.3
  HS-Source-Dirs:     test

source-repository head
  type:     git
  location: https://github.com/tittoassini/top
