name: top
version: 0.2.9
synopsis: Top (typed oriented protocol) API
description: See the <http://github.com/Quid2/top online tutorial>.
homepage: http://github.com/Quid2/top
category: Network, Cloud, Distributed Computing
license:             BSD3
license-file:        LICENSE
author:              Pasqualino `Titto` Assini
maintainer:          Quid2@gmail.com
copyright:           Copyright: (c) 2016-2017 Pasqualino `Titto` Assini
cabal-version: >=1.10
build-type: Simple
Tested-With: GHC == 7.10.3 GHC == 8.0.2 GHC == 8.2.2
extra-source-files:
    stack.yaml
    stack710.yaml
    stack802.yaml
    stack822.yaml
    README.md

source-repository head
    type: git
    location: https://github.com/Quid2/top

library
    
    if impl(ghc <8)
        build-depends:
            th-lift >=0.7.7 && < 0.8
    
    if impl(ghcjs -any)
        build-depends:
            ghcjs-base >=0.2 && <0.3,
            stm
    else
        exposed-modules:
            Repo.Disk.DB
            Repo.Disk
        build-depends:
            -- ghcjs-base-stub,
            acid-state >=0.14.2 && < 0.15,
            filepath >=1.4.0.0,
            hslogger,
            safecopy >=0.9.3 && <1,
            websockets >=0.9.8.2 && < 0.13
    exposed-modules:
        Data.Pattern
        Data.Pattern.Types
        Data.Pattern.TH
        Data.Pattern.Util
        Data.Pattern.Transform
        Network.Top
        Network.Top.Function
        Network.Top.Pipes
        Network.Top.Repo
        Network.Top.Repo0
        Network.Top.Types
        Network.Top.Run
        Network.Top.Util
        Network.Top.WSApp
        Network.Top.WSApp.GHC
        Network.Top.WSApp.GHCJS
        Repo
        Repo.Types
        Repo.Memory
        Repo.Auto
        Repo.Net
    build-depends:
                  async >=2.1.1 && < 3,
                  base >=4.7 && <5,
                  bytestring>=0.10.6.0,
                  data-default-class,
                  template-haskell >=2.10.0.0 && < 3, 
                  pipes >=4.1.9 && <5,
                  transformers >= 0.4.2.0 && < 0.6,
                  text,
                  mtl >=2.2.1 && < 2.3,
                  containers,
                  deepseq ==1.4.*,
                  extra >=1.4.10 && <2,
                  pretty >= 1.1.2 && < 1.2,
                  flat==0.3.*,
                  zm >=0.3 
                  -- && < 0.5
    default-language: Haskell2010
    hs-source-dirs: src

test-suite repo
    type: exitcode-stdio-1.0
    main-is: RepoSpec.hs
    build-depends:
                  base,
                  directory >=1.2,
                  tasty >= 0.11,
                  tasty-hunit >= 0.8,
                  top,
                  zm
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite doc
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  ghc-options:        -threaded
  main-is:            DocSpec.hs
  build-depends:      base, doctest>=0.11.1,filemanip>=0.3.6.3
  HS-Source-Dirs:     test
