name:               top
version:            0.2.15
synopsis:           Top (typed oriented protocol) API
description:        See the <http://github.com/Quid2/top online tutorial>.
homepage:           http://github.com/Quid2/top
category:           Network, Cloud, Distributed Computing
license:            BSD3
license-file:       LICENSE
author:             Pasqualino `Titto` Assini
maintainer:         tittoassini@gmail.com
copyright:          Copyright: (c) 2016-2023 Pasqualino `Titto` Assini
cabal-version:      >=1.10
build-type:         Simple
tested-with:        GHC ==7.10.3 || ==8.0.2 || ==8.2.2
extra-source-files: README.md

-- stack710.yaml
-- stack802.yaml
-- stack822.yaml
-- stack.yaml
source-repository head
  type:     git
  location: https://github.com/Quid2/top

flag fast
  description: Use faster implementation
  default:     False

library
  if impl(ghc <8)
    build-depends: th-lift >=0.7.7 && <0.8

  if impl(ghcjs -any)
    build-depends:
        ghcjs-base  >=0.2 && <0.3
      , stm

  else
    exposed-modules:
      Repo.Disk
      Repo.Disk.DB

    build-depends:
        acid-state  >=0.14.2  && <0.17
      , filepath    >=1.4.0.0
      , hslogger
      , safecopy    >=0.9.3   && <1
      , websockets  >=0.9.8.2 && <0.13

  -- ghcjs-base-stub,
  exposed-modules:
    Data.Pattern
    Data.Pattern.Bits
    Data.Pattern.Matcher
    Data.Pattern.Matcher.Haskell
    Data.Pattern.TH
    Data.Pattern.Transform
    Data.Pattern.Types
    Data.Pattern.Util
    Network.Top
    Network.Top.Function
    Network.Top.Pipes
    Network.Top.Repo
    Network.Top.Repo0
    Network.Top.Run
    Network.Top.Types
    Network.Top.Util
    Network.Top.WSApp
    Network.Top.WSApp.GHC
    Network.Top.WSApp.GHCJS
    Repo
    Repo.Auto
    Repo.Memory
    Repo.Net
    Repo.Types

  build-depends:
      async               >=2.1.1    && <3
    , base                >=4.7      && <5
    , bytestring          >=0.10.6.0
    , containers
    , data-default-class
    , deepseq             >=1.4      && <1.5
    , extra               >=1.4.10   && <2
    , flat                >=0.6      && <0.7
    , model
    , mtl                 >=2.2.1    && <2.3
    , pipes               >=4.1.9    && <5
    , pretty              >=1.1.2    && <1.2
    , template-haskell    >=2.10.0.0 && <3
    , text
    , time
    , transformers        >=0.4.2.0  && <0.6
    , zm                  >=0.3

  -- if (arch(x86_64) && flag(fast))
  --   other-modules: Data.Pattern.Matcher.X64
  --   build-depends: x86-64bit >=0.4.5

  -- && < 0.5
  default-language: Haskell2010
  hs-source-dirs:   src

test-suite repo
  type:             exitcode-stdio-1.0
  main-is:          RepoSpec.hs
  build-depends:
      base
    , directory    >=1.2
    , tasty        >=0.11
    , tasty-hunit  >=0.8
    , top
    , zm

  default-language: Haskell2010
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite pattern
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          PatternSpec.hs
  other-modules:
    Test.Data
    Test.Data.Flat
    Test.Data.Model
    Test.Data2
    Test.Data2.Flat
    Test.Data3

  build-depends:
      base
    , bytestring
    , containers
    , criterion
    , flat
    , model
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , template-haskell
    , text
    , top
    , zm

  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite doc
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -threaded
  main-is:          DocSpec.hs
  build-depends:
      base
    , doctest    >=0.11.1
    , filemanip  >=0.3.6.3
    , time

  hs-source-dirs:   test
